--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "solid-js": "^1.9.10"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
+    "prettier": "^3.7.3",
     "vite": "^7.2.4",
     "vite-plugin-solid": "^2.11.10"
   }
