feat: Apple Watch honeycomb UI with vertical growth pattern
- Implemented canvas-based Apple Watch grid layout
- Vertical honeycomb pattern: 1, 3, 2, 3, 2... profiles going down
- Hardware-accelerated animations with Motion library
- Pan/drag interaction (mouse and touch)
- Desktop: 440px right-side panel
- Mobile: Bottom-center sheet
- Profile images with glow effects when centered
- Smooth 60fps animations with proper GPU acceleration
- Click profiles to select and show actions in bottom panel

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@motionone/solid": "^10.16.4",
+    "motion": "^12.23.25",
     "solid-js": "^1.9.10"
   },
   "devDependencies": {
