--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@motionone/solid": "^10.16.4",
     "@solidjs/router": "^0.15.4",
+    "@supabase/supabase-js": "^2.87.1",
+    "hono": "^4.11.0",
     "motion": "^12.23.25",
     "solid-js": "^1.9.10"
   },
   "devDependencies": {
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
     "@types/node": "^24.10.1",
     "prettier": "^3.7.3",
     "vite": "^7.2.4",
