--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@supabase/supabase-js": "^2.87.1",
     "hono": "^4.11.0",
     "motion": "^12.23.25",
-    "solid-js": "^1.9.10"
+    "solid-js": "^1.9.10",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@babel/parser": "^7.28.5",
     "@babel/traverse": "^7.28.5",
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.10.4",
     "prettier": "^3.7.3",
+    "typescript": "^5.9.3",
     "vite": "^7.2.4",
     "vite-plugin-solid": "^2.11.10"
   }
