📚 Add documentation and update .gitignore
Added:
- README.md - Root project documentation with AI assistant quickstart
- tools/README.md - Detailed AI tools reference
- .gitignore - Ignore AI memory files (.lancedb/, etc)

Users can now:
- Understand the project structure
- Use AI tools without reading code
- Know what's gitignored and why

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,14 @@ htmlcov/
 # ============================================
 /mnt/transcripts/
 *.transcript.txt
+
+# AI Assistant - Memory & Traces (personal, don't commit)
+.lancedb/
+.edit_history.db
+tools/__pycache__/
+tools/*.pyc
+
+# AI Assistant - Temporary files
+.cocoindex_cache/
+*.embedding_cache
+
