feat: Add AI Code Assistant v9 with Tree-sitter and automatic tool use
- Tree-sitter integration for precise code parsing (imports, functions, components)
- Automatic tool selection via Claude (find_usages, list_stores, semantic_search)
- Hybrid approach: Tree-sitter for structure + embeddings for semantic understanding
- Parses 81/93 files, indexes 201+ symbols
- Supports multi-tool execution for complex queries
- Git status awareness for recent changes
- Clean conversation history (no tool artifact pollution)

Removed legacy versions:
- ai_editor.py
- ai_editor_v3.py
- ai_editor_v8.py
- All .bak files

Tools:
- find_usages: Precise symbol tracking via parsed imports
- list_stores/list_components: Codebase inventory
- semantic_search: Concept-based code discovery via Nomic embeddings

This replaces all previous versions with a production-ready code assistant.

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,44 @@ tools/*.pyc
 .cocoindex_cache/
 *.embedding_cache
 
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+*.egg-info/
+.pytest_cache/
+
+# Environment variables
+.env
+.env.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Database
+*.db
+*.sqlite
+
+# Logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Node modules (if any)
+node_modules/
+
+# Build outputs
+dist/
+build/
+*.egg
+
