refactor: Move generated docs to tools/docs/
Changes:
- Created tools/docs/ for generated documentation
- ARCHITECTURE.md (17.9KB) → tools/docs/
- FLOW.md (17.1KB) → tools/docs/
- Updated analyze-project.sh to output to tools/docs/
- Updated run_shell_command.py allowlist (tools/docs/*)
- Added tools/docs/.last_generated to .gitignore

Test: AgentWinter successfully generates and reads from new location
✅ 6 tool calls, complete analysis working

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,11 @@ dist/
 build/
 *.egg
 
+
+# Auto-refresh markers
+.coco_last_index
+docs/.last_generated
+
+# Auto-refresh markers
+.coco_last_index
+tools/docs/.last_generated
