--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check:env": "./check_env.sh",
+    "check:db": "./verify_db_foundation.sh"
   },
   "dependencies": {
     "@motionone/solid": "^10.16.4",
